{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Gameplay",
            "id": "7f2f1f98-f75a-4386-998c-f1c54730064e",
            "actions": [
                {
                    "name": "MouseLeftClick",
                    "type": "Button",
                    "id": "821dff17-a67e-4fc6-8e19-47a3526ad0f9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap,SlowTap"
                },
                {
                    "name": "MouseRightClick",
                    "type": "Button",
                    "id": "4e08f328-e23a-4413-96e7-d809d4f75a17",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap"
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "f0d64c32-8c50-4dd8-9d84-7e38dc87095c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "78e8a4b9-51c1-4d4a-b0f0-dee7d7c790a2",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseLeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0fd28c2f-d76f-49ba-9618-1de8ae703846",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseRightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a7392fea-38bf-4d07-8835-3ce7dc7701e3",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}